FIX: expired events from PM not visible in upcoming events calendar

--- a/assets/stylesheets/common/upcoming-events-calendar.scss
+++ b/assets/stylesheets/common/upcoming-events-calendar.scss
@@ -118,6 +118,10 @@
     }
   }
 
+  .fc-past-event {
+    opacity: 0.3;
+  }
+
   .fc-left {
     .fc-button-group:first-child {
       margin-left: 0;
